--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':baselibrary')
-
     // dagger
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt 'com.google.auto:auto-common:0.10'
     implementation "com.google.dagger:dagger-android:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version" // if you use the support libraries
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    // if you use the support libraries
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    // guava
+    implementation "com.google.guava:guava:$rootProject.guavaVersion"
+    implementation 'com.android.support:design:26.1.0'
 }
