change: change the code to kotlin style
1.add the drawable resources
2.use kotlin android extension to replace findViewById()

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".tasks.TasksActivity"
+            android:name=".diarylist.DiaryListActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/Theme.Design.NoActionBar">
