--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name=".diarylist.DiaryListActivity"
+            android:name="com.empty.jinux.simplediary.ui.diarylist.DiaryListActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name">
             <intent-filter>
@@ -27,22 +26,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".addeditdiary.AddEditDiaryActivity"
+            android:name="com.empty.jinux.simplediary.ui.addeditdiary.AddEditDiaryActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" />
-
         <activity
-            android:name=".taskdetail.TaskDetailActivity"
+            android:name="com.empty.jinux.simplediary.ui.taskdetail.TaskDetailActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" />
-
-
         <activity
-            android:name=".statistics.StatisticsActivity"
+            android:name="com.empty.jinux.simplediary.ui.statistics.StatisticsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" />
+        <activity android:name="com.empty.jinux.simplediary.ui.about.AboutActivity"></activity>
     </application>
 
 </manifest>
