--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.empty.jinux.simplediary"
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,8 +27,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.google.firebase:firebase-storage:11.8.0'
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.firebase:firebase-database:11.8.0'
@@ -48,7 +48,7 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     // guava
     implementation "com.google.guava:guava:$rootProject.guavaVersion"
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:design:27.0.2'
 
     implementation 'com.google.code.gson:gson:2.8.2'
 
@@ -57,6 +57,14 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    implementation 'me.drakeet.multitype:multitype:3.4.4'
+    implementation 'me.drakeet.multitype:multitype-kotlin:3.4.4'
+    implementation 'me.drakeet.support:about:2.0.2'
+
+    implementation 'com.android.support:multidex:1.0.2'
+
+    implementation "org.jetbrains.anko:anko-commons:0.10.4"
+    implementation "androidx.core:core-ktx:0.1"
 
 }
 
