--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,9 @@
             android:name="com.empty.jinux.simplediary.ui.statistics.StatisticsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" />
-        <activity android:name="com.empty.jinux.simplediary.ui.about.AboutActivity"></activity>
+        <activity
+            android:name="com.empty.jinux.simplediary.ui.about.AboutActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
