--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.empty.jinux.simplediary.ui.diarylist.DiaryListActivity"
+            android:name="com.empty.jinux.simplediary.ui.main.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name">
             <intent-filter>
@@ -28,10 +28,6 @@
         </activity>
         <activity
             android:name="com.empty.jinux.simplediary.ui.diarydetail.DiaryDetailActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name" />
-        <activity
-            android:name="com.empty.jinux.simplediary.ui.statistics.StatisticsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" />
         <activity
