--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
 
     implementation "android.arch.persistence.room:runtime:1.1.0-alpha2"
     kapt "android.arch.persistence.room:compiler:1.1.0-alpha2"
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
 
 
