--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,11 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
-    implementation 'com.google.firebase:firebase-storage:11.8.0'
-    implementation 'com.google.firebase:firebase-auth:11.8.0'
-    implementation 'com.google.firebase:firebase-database:11.8.0'
-    implementation 'com.google.android.gms:play-services-location:11.8.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:support-v4:$support_version"
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-all:1.10.19"
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -56,8 +54,7 @@ dependencies {
     // if you use the support libraries
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     // guava
-    implementation "com.google.guava:guava:$rootProject.guavaVersion"
-    implementation 'com.android.support:design:27.0.2'
+    implementation "com.google.guava:guava:$rootProject.guava_version"
 
     implementation 'com.google.code.gson:gson:2.8.2'
 
@@ -70,14 +67,13 @@ dependencies {
     implementation 'me.drakeet.multitype:multitype-kotlin:3.4.4'
     implementation 'me.drakeet.support:about:2.0.2'
 
-    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation "org.jetbrains.anko:anko-commons:0.10.4"
-    implementation "androidx.core:core-ktx:0.1"
+    implementation "androidx.core:core-ktx:0.3"
 
-    implementation "android.arch.persistence.room:runtime:1.1.0-alpha2"
-    kapt "android.arch.persistence.room:compiler:1.1.0-alpha2"
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation "android.arch.persistence.room:runtime:1.1.0-beta2"
+    kapt "android.arch.persistence.room:compiler:1.1.0-beta2"
 }
 
 
