change: adjust the statistics page
we add  "vectorDrawables.useSupportLibrary = true" to support vector
image refrence color

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+
+        vectorDrawables.useSupportLibrary = true
+
     }
     buildTypes {
         release {
