--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'io.fabric'
+
 
 android {
     compileSdkVersion 27
@@ -87,6 +89,8 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.0-beta2"
     kapt "android.arch.persistence.room:compiler:1.1.0-beta2"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.1'
 }
 
 
