change: remove the not-used firebase libraries

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,14 +55,12 @@ dependencies {
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation "com.google.firebase:firebase-storage:$gms_version"
-    implementation "com.google.firebase:firebase-auth:$gms_version"
-    implementation "com.google.firebase:firebase-database:$gms_version"
+    implementation "com.google.firebase:firebase-database:$firebase_version"
     implementation "com.google.android.gms:play-services-location:$gms_version"
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-all:1.10.19'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':baselibrary')
     // dagger
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
