change: different the debug and release from applicationId and versionName

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,11 @@ android {
 
     }
     buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
+        }
+
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
