--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ buildscript {
         classpath 'com.google.gms:google-services:3.1.0'
 
         classpath 'io.fabric.tools:gradle:1.25.1'
+
+        classpath 'org.ajoberstar:grgit:2.2.0'
     }
 
     ext {
