--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 27
         versionCode Grgit.open().log().size()
-        versionName "1.0.5"
+        versionName Grgit.open().describe()
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
