--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             android:name="com.empty.jinux.simplediary.ui.about.AboutActivity"
             android:label="@string/app_name" />
         <activity android:name=".ui.lock.LockActivity" />
+        <activity android:name=".ui.settings.SettingsActivity" />
     </application>
 
 </manifest>
