--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,13 +27,14 @@
         </activity>
         <activity
             android:name="com.empty.jinux.simplediary.ui.diarydetail.DiaryDetailActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
             android:name="com.empty.jinux.simplediary.ui.about.AboutActivity"
             android:label="@string/app_name" />
         <activity android:name=".ui.lock.LockActivity" />
-        <activity android:name=".ui.settings.SettingsActivity" />
+        <activity
+            android:name=".ui.settings.SettingsActivity"/>
     </application>
 
 </manifest>
