--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
             android:label="@string/app_name" />
         <activity android:name=".ui.lock.LockActivity" />
         <activity
-            android:name=".ui.settings.SettingsActivity"/>
+            android:name=".ui.settings.SettingsActivity"
+            android:label="@string/settings_title"/>
     </application>
 
 </manifest>
