--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity
             android:name="com.empty.jinux.simplediary.ui.diarydetail.DiaryDetailActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateVisible|adjustNothing" />
+            android:windowSoftInputMode="stateAlwaysHidden|adjustNothing" />
         <activity
             android:name="com.empty.jinux.simplediary.ui.about.AboutActivity"
             android:label="@string/app_name" />
