build: upload baselibrary to mavenLocal so other project can use it

--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -4,8 +4,6 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 27
 
-
-
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 27
@@ -41,4 +39,25 @@ dependencies {
 }
 repositories {
     mavenCentral()
+}
+
+apply plugin: 'maven' // 引入maven插件
+
+
+group = 'com.empty.jinux' // 会按照group生成.m2下的目录路径
+version = '1.0.0-RELEASE' // 指定版本
+
+def localMavenRepo = 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: localMavenRepo)
+
+            pom.project {
+                name = project.name
+                description = 'Some Utils Methods'
+            }
+        }
+    }
 }
