--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
 
     implementation "com.google.android.gms:play-services-location:$gms_version"
     implementation 'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'com.google.android.gms:play-services-drive:15.0.1'
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-all:1.10.19'
@@ -105,6 +107,7 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:1.1.1-rc1"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
+
 }
 
 
