change: remove the dependences to drakeet's about page
why, just for more freedom and reduce the size

I can' design nicer about page

--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation "com.android.support:design:$support_version"
+
 }
 repositories {
     mavenCentral()
