refactor: clean the PuncharCard and StatisticView and use android kotlin extension experiment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ android {
             signingConfig signingConfigs.config
         }
     }
+
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
