--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
         <activity
             android:name=".ui.about.AboutActivity"
             android:label="@string/app_name" />
-        <activity android:name=".ui.lock.LockActivity" />
+        <activity android:name=".ui.lock.LockActivity"
+            android:exported="false"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".ui.settings.SettingsActivity"
             android:label="@string/settings_title" />
