--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:1.1.1"
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
 
+    implementation 'com.github.garretyoder:Colorful:2.3.4'
 }
 
 
