--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.51'
+    ext.kotlin_version = '1.2.61'
     repositories {
         google()
         jcenter()
@@ -10,7 +10,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.13'
 
@@ -18,7 +18,7 @@ buildscript {
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:4.0.1'
 
-        classpath 'io.fabric.tools:gradle:1.25.1'
+        classpath 'io.fabric.tools:gradle:1.25.4'
 
         classpath 'org.ajoberstar:grgit:2.2.0'
     }
@@ -26,9 +26,9 @@ buildscript {
     ext {
         dagger_version = '2.16'
         guava_version = '18.0'
-        support_version = '27.1.1'
+        support_version = '28.1.+'
         gms_version='15.0.1' //
-        firebase_version='16.0.0' //
+        firebase_version='16.0.3' //
 
     }
 }
@@ -42,6 +42,7 @@ allprojects {
         maven {
             url 'https://maven.google.com/'
         }
+
     }
 }
 
