--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -6,11 +6,11 @@ apply plugin: 'kotlin-android-extensions'
 android {
     defaultPublishConfig "debug"
 
-    compileSdkVersion 27
+    compileSdkVersion rootProject.androidCompileSdkVersion
 
     defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 27
+        minSdkVersion 14
+        targetSdkVersion rootProject.androidTargetSdkVersion
         versionCode 1
         versionName "1.0"
 
