--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
 
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-all:1.10.19'
+    testImplementation 'org.mockito:mockito-core:2.23.4'
+    androidTestImplementation "org.mockito:mockito-android:2.23.4"
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation project(':baselibrary')
