--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,24 +66,24 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.preference:preference:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
 
     implementation "com.google.firebase:firebase-core:$firebase_version"
 
     implementation "com.google.android.gms:play-services-location:$gms_version"
-    implementation 'com.google.android.gms:play-services-places:15.0.1'
-    implementation 'com.google.android.gms:play-services-drive:15.0.1'
-    implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation "com.google.android.gms:play-services-places:$gms_version"
+    implementation "com.google.android.gms:play-services-drive:$gms_version"
+    implementation "com.google.android.gms:play-services-auth:16.0.1"
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.23.4'
     androidTestImplementation "org.mockito:mockito-android:2.23.4"
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation project(':baselibrary')
     // dagger
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
@@ -95,18 +95,18 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     // guava
     implementation "com.google.guava:guava:$rootProject.guava_version"
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'org.jetbrains.anko:anko-commons:0.10.4'
-    implementation 'androidx.core:core-ktx:1.0.0'
-    implementation 'androidx.room:room-runtime:2.0.0-rc01'
-    kapt "androidx.room:room-compiler:2.0.0-rc01"
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'androidx.room:room-runtime:2.1.0-alpha03'
+    kapt "androidx.room:room-compiler:2.1.0-alpha03"
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 
     implementation 'com.github.garretyoder:Colorful:2.3.4'
 }
