--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,10 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 
     implementation 'com.github.garretyoder:Colorful:2.3.4'
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
 }
 
 
