--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,14 +23,14 @@ android {
             storePassword '123123'
         }
     }
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.empty.jinux.simplediary"
         minSdkVersion 17
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode Grgit.open().log().size()
         versionName Grgit.open().describe()
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
 
@@ -65,12 +65,12 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation "com.android.support:support-v4:$support_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:preference-v7:$support_version"
-    implementation "com.android.support:cardview-v7:$support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
-    implementation "com.android.support:design:$support_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
 
     implementation "com.google.firebase:firebase-core:$firebase_version"
 
@@ -79,8 +79,8 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-all:1.10.19'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation project(':AndroidBaseKt')
     // dagger
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
@@ -99,12 +99,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'org.jetbrains.anko:anko-commons:0.10.4'
-    implementation 'androidx.core:core-ktx:0.3'
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    kapt "android.arch.persistence.room:compiler:1.1.1"
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.room:room-runtime:2.0.0'
+    kapt 'androidx.room:room-compiler:2.0.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
 }
 
