--- a/build.gradle
+++ b/build.gradle
@@ -1,48 +1,32 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
+
 buildscript {
-    ext.kotlin_version = '1.3.31'
-    repositories {
-        google()
-        jcenter()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
+    ext {
+        compose_version = '1.1.0-beta01'
+        guava_version = '24.1_jre'
+        support_version = '28.+'
+        gms_version='18.0.0' //
+        firebase_version='19.0.0' //
+        kotlin_version = '1.7.10'
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.13'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:4.2.0'
-
-        classpath 'io.fabric.tools:gradle:1.25.4'
-
+//        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.13'
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
         classpath 'org.ajoberstar:grgit:2.2.0'
-    }
-
-    ext {
-        dagger_version = '2.16'
-        guava_version = '18.0'
-        support_version = '28.+'
-        gms_version='15.0.1' //
-        firebase_version='16.0.0' //
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43.2'
 
     }
 }
 
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-        maven { url "https://jitpack.io" }
-        maven {
-            url 'https://maven.google.com/'
-        }
-    }
+plugins {
+    id 'com.android.application' version '7.2.0' apply false
+    id 'com.android.library' version '7.2.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
 }
 
 task clean(type: Delete) {
